Update Java and dependencies